--- a/index.html
+++ b/index.html
@@ -26,9 +26,23 @@
 
     <a class="nav-link" href="#">Request Invite</a>
 
-    <img class="hamburger" src="images/icon-hamburger.svg" alt="icon-hamburger">
+    <div class="parent" href="">
+      <img class="hamburger" src="images/icon-hamburger.svg" alt="icon-hamburger">
+      <img class="close" src="images/icon-close.svg" alt="icon-hamburger">
+    </div>
+    
 
   </nav>
+
+  <div class="mobile-nav">
+    <ul>
+      <li>Home</li>
+      <li>About</li>
+      <li>Contact</li>
+      <li>Blog</li>
+      <li>Careers</li>
+    </ul>
+  </div>
   
   <section class="hero">
 
@@ -237,6 +251,7 @@
   </footer>
 
 </body>
+<script src="app.js"></script>
 </html>
 
 <!-- <div class="attribution">
