made the links look and work like links

--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
 
    <!-- Navigation -->
    <nav>
+    <a href="">
+      <img src="images/logo.svg" alt="">
+    </a>
 
-    <img src="images/logo.svg" alt="">
-
-    <ul>
-      <li>Home</li>
-      <li>About</li>
-      <li>Contact</li>
-      <li>Blog</li>
-      <li>Careers</li>
+    <ul class="mid-nav">
+      <li> <a href=""> Home </a> </li>
+      <li> <a href=""> About </a> </li>
+      <li> <a href=""> Contact </a> </li>
+      <li> <a href=""> Blog </a> </li>
+      <li> <a href=""> Careers </a> </li>
     </ul>
 
     <a class="nav-link" href="#">Request Invite</a>
@@ -36,11 +37,11 @@
 
   <div class="mobile-nav">
     <ul>
-      <li>Home</li>
-      <li>About</li>
-      <li>Contact</li>
-      <li>Blog</li>
-      <li>Careers</li>
+      <li> <a href=""> Home </a> </li>
+      <li> <a href=""> About </a> </li>
+      <li> <a href=""> Contact </a> </li>
+      <li> <a href=""> Blog </a> </li>
+      <li> <a href=""> Careers </a> </li>
     </ul>
   </div>
   
@@ -215,27 +216,29 @@
     <div class="foot-flex">
       <ul class="foot1">
         <li>
-          <img src="images/logo copy.svg" alt="">
+          <a href="">
+            <img src="images/logo copy.svg" alt="">
+          </a>
         </li>
         <li>
           <ul class="socials">
-            <li> <img src="images/icon-facebook.svg" alt="icon-facebook"> </li>
-            <li> <img src="images/icon-youtube.svg" alt="icon-youtube"> </li>
-            <li> <img src="images/icon-twitter.svg" alt="icon-twitter"> </li>
-            <li> <img src="images/icon-pinterest.svg" alt="icon-pinterest"> </li>
-            <li> <img src="images/icon-instagram.svg" alt="icon-instagram"> </li>
+            <li>  <a href=""><img src="images/icon-facebook.svg" alt="icon-facebook"></a> </li>
+            <li>  <a href=""><img src="images/icon-youtube.svg" alt="icon-youtube"></a> </li>
+            <li>  <a href=""><img src="images/icon-twitter.svg" alt="icon-twitter"></a> </li>
+            <li>  <a href=""><img src="images/icon-pinterest.svg" alt="icon-pinterest"></a> </li>
+            <li>  <a href=""><img src="images/icon-instagram.svg" alt="icon-instagram"></a> </li>
           </ul>
         </li>
       </ul>
       <ul class="foot2">
-        <li>About Us</li>
-        <li>Contact</li>
-        <li>Blog</li>
+        <li> <a href="">About Us</a> </li>
+        <li> <a href="">Contact</a> </li>
+        <li> <a href="">Blog</a> </li>
       </ul>
       <ul class="foot3">
-        <li>Careers</li>
-        <li>Support</li>
-        <li>Privacy Policy</li>
+        <li> <a href=""> Career </a> </li>
+        <li> <a href=""> Support </a> </li>
+        <li> <a href=""> Privacy Policy </a> </li>
       </ul>
       <ul class="foot4">
         <li>
